# drf-multi-serializers

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml  renovate.json5
.github/workflows/: workflow.yml
src/drf_multi_serializers/: __init__.py  exceptions.py  mixins.py
