[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-multi-serializers"
version = "1.1.1"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "Handle multiple serializers for the same view in Django Rest Framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["djangorestframework"]

[project.urls]
Homepage = "https://github.com/stefanofusai/drf-multi-serializers"
Repository = "https://github.com/stefanofusai/drf-multi-serializers"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]
